完成添加记录界面

--- a/实战案例1/改造前/mysite/templates/home/salescheck.html
+++ b/实战案例1/改造前/mysite/templates/home/salescheck.html
@@ -5,7 +5,7 @@
     <h3 class="h3">销售管理 / 销售对账</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group mr-2">
-          <a class="btn btn-sm btn-primary">添加记录</a>
+          <a class="btn btn-sm btn-primary" href="addsalescheck">添加记录</a>
         </div>
       </div>
   </div>
