--- a/实战案例1/改造前/mysite/templates/home/addsalescheck.html
+++ b/实战案例1/改造前/mysite/templates/home/addsalescheck.html
@@ -11,35 +11,36 @@
 </div>
 
 <div class="col-sm-10">
-  <form>
+  <form method="POST">
+    {% csrf_token %}
     <div class="form-group row">
       <label for="inputEmail3" class="col-sm-2 col-form-label">客户</label>
       <div class="col-sm-6">
-        <input type="input" class="form-control" id="inputEmail3">
+        <input type="input" class="form-control" name="name">
       </div>
     </div>
     <div class="form-group row">
       <label for="inputPassword3" class="col-sm-2 col-form-label">入账日期</label>
       <div class="col-sm-6">
-        <input type="input" class="form-control" id="inputPassword3">
+        <input type="input" class="form-control" name="created_at">
       </div>
     </div>
     <div class="form-group row">
       <label for="inputPassword3" class="col-sm-2 col-form-label">入账金额</label>
       <div class="col-sm-6">
-        <input type="input" class="form-control" id="inputPassword3">
+        <input type="input" class="form-control" name="amount">
       </div>
     </div>
     <div class="form-group row">
       <label for="inputPassword3" class="col-sm-2 col-form-label">已到账款项</label>
       <div class="col-sm-6">
-        <input type="input" class="form-control" id="inputPassword3">
+        <input type="input" class="form-control" name="total">
       </div>
     </div>
     <div class="form-group row">
       <label for="inputPassword3" class="col-sm-2 col-form-label">剩余到账款项</label>
       <div class="col-sm-6">
-        <input type="input" class="form-control" id="inputPassword3">
+        <input type="input" class="form-control" name="leave">
       </div>
     </div>
     <div class="form-group row">
