--- a/实战案例1/改造后/templates/home/index.html
+++ b/实战案例1/改造后/templates/home/index.html
@@ -6,9 +6,14 @@
 </div>
 
 <div class="col-sm-10">
-    {% for current_obj in object_list  %}
-    
-    {{current_obj}}
+    {% for current_obj in object_list %}
+    <div>
+      {% if current_obj.role == "user" %}
+        你：{{current_obj.展示content}}
+      {% else %}
+        AI：{{current_obj.展示content}}
+      {% endif %}
+    </div>
     {% endfor %}
     <form method="POST">
       {% csrf_token %}
