--- a/实战案例1/改造后/templates/home/index.html
+++ b/实战案例1/改造后/templates/home/index.html
@@ -22,8 +22,9 @@
         <div class="col-sm-6">
           <input type="input" class="form-control" name="question">
         </div>
-        <button type="submit" class="btn btn-primary">提交</button>
+        <button type="submit" class="btn btn-primary">提交</button> &nbsp;
       </div>
     </form>
+    <a href="/newtalk" class="btn btn-warning">开始新的对话</a>
   </div>
   {% endblock %}
