--- a/实战案例1/改造后/templates/home/index.html
+++ b/实战案例1/改造后/templates/home/index.html
@@ -9,7 +9,7 @@
     {% for current_obj in object_list %}
     <div>
       {% if current_obj.role == "user" %}
-        你：{{current_obj.处理后content}}
+        你：{{current_obj.content}}
       {% else %}
         AI：{{current_obj.处理后content}}
       {% endif %}
