--- a/实战案例1/改造后/templates/home/index.html
+++ b/实战案例1/改造后/templates/home/index.html
@@ -7,13 +7,15 @@
 
 <div class="col-sm-10">
     {% for current_obj in object_list %}
-    <div>
-      {% if current_obj.role == "user" %}
-        你：{{current_obj.content}}
-      {% else %}
-        AI：{{current_obj.处理后content}}
+      {% if current_obj.不带入大模型对话中 is False%}
+      <div>
+        {% if current_obj.role == "user" %}
+          你：{{current_obj.content}}
+        {% else %}
+          AI：{{current_obj.处理后content}}
+        {% endif %}
+      </div>
       {% endif %}
-    </div>
     {% endfor %}
     <form method="POST">
       {% csrf_token %}
