完成参考链接

--- a/实战案例3/第19节/程序/main/templates/home/index.html
+++ b/实战案例3/第19节/程序/main/templates/home/index.html
@@ -17,6 +17,9 @@
       </div>
       {% endif %}
     {% endfor %}
+    {% if link_text is not None %}
+      参考链接：<a href="{{link_url}}" target="_blank">{{link_text}}</a> &nbsp;
+    {% endif %}
     <form method="POST">
       {% csrf_token %}
       <div class="form-group row">
