完成好评和差评按钮

--- a/实战案例3/第20节/程序/main/templates/home/index.html
+++ b/实战案例3/第20节/程序/main/templates/home/index.html
@@ -23,6 +23,11 @@
           <div>
       参考链接：<a href="{{link_url}}" target="_blank">{{link_text}}</a> &nbsp;
           </div>
+          <div class="text-right"> 
+            <a href="{{link_url}}">好评</a> 
+                &nbsp;
+                <a href="{{link_url}}">差评</a> 
+                </div>
     {% endif %}
     <hr>
         {% endif %}
