--- a/实战案例3/第20节/程序/main/templates/home/index.html
+++ b/实战案例3/第20节/程序/main/templates/home/index.html
@@ -24,9 +24,9 @@
       参考链接：<a href="{{link_url}}" target="_blank">{{link_text}}</a> &nbsp;
           </div>
           <div class="text-right"> 
-            <a href="{{link_url}}">好评</a> 
+            <a href="review?conversationid={{current_obj.id}}&review=positive">好评</a> 
                 &nbsp;
-                <a href="{{link_url}}">差评</a> 
+                <a href="review?conversationid={{current_obj.id}}&review=negative">差评</a> 
                 </div>
     {% endif %}
     <hr>
