--- a/实战案例3/第21节/程序/main/templates/home/index.html
+++ b/实战案例3/第21节/程序/main/templates/home/index.html
@@ -6,6 +6,23 @@
 </div>
 
 <div class="col-sm-10">
+  <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+      {% if module == 1 %}
+        <a class="nav-link active" id="profile-tab" data-bs-toggle="tab" type="button" role="tab" aria-selected="false" href="/?module=1">销售管理</a>
+      {% else %}
+        <a class="nav-link" id="profile-tab" data-bs-toggle="tab" type="button" role="tab" aria-selected="false" href="/?module=1">销售管理</a>
+      {% endif %}
+    </li>
+    <li class="nav-item" role="presentation">
+      {% if module == 2 %}
+        <a class="nav-link active" id="contact-tab" data-bs-toggle="tab" type="button" role="tab" aria-selected="false" href="/?module=2">生产管理</a>
+      {% else %}
+      <a class="nav-link" id="contact-tab" data-bs-toggle="tab" type="button" role="tab" aria-selected="false" href="/?module=2">生产管理</a>
+      {% endif %}
+    </li>
+  </ul>
+
   {% if question is not None %}
           <div>
       你：{{question}}
@@ -40,6 +57,7 @@
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-2 col-form-label">输入你的问题</label>
         <div class="col-sm-6">
+          <input type="hidden" name="module" value="{{module}}">
           <input type="input" class="form-control" name="question">
         </div>
         <button type="submit" class="btn btn-primary">提交</button> &nbsp;
